--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   </head>
   <style> 
     p {
-    color:purple;}
+    color:orange;}
+    background-color: purple;
   </style>
   <body>
     <div>
