--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <style> 
     p {
     color:orange;}
-    background-color: purple;
+    div {
+    background-color: purple;}
   </style>
   <body>
     <div>
