--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     p {
     color:orange;}
     div {
-    background-color: purple;} 
+    background-color: purple;
+    margin: 20px;
+    padding: 5px;} 
   </style>
   <body>
     <div>
