--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     div {
     background-color: purple;
     margin: 20px;
-    padding: 5px;} 
+    padding: 5px;
+    width: 600px;
+    height: 250px;} 
   </style>
   <body>
     <div>
