--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     color:orange;}
     div {
     background-color: purple;
-    left: 50%;
-    top: 25%;
+    left: 600px;
+    top: 200%;
     margin: 20px;
     padding: 5px;
     width: 600px;
