--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     color:orange;}
     div {
     background-color: purple;
+    position: absolute;
     left: 600px;
     top: 200%;
     margin: 20px;
