--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     div {
     background-color: purple;
     position: absolute;
-    left: 100px;
-    top: 200%;
+    left: 600px;
+    top: 200px;
     margin: 20px;
     padding: 5px;
     width: 600px;
