--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     div {
     background-color: purple;
     position: absolute;
-    left: 25%;
-    top: 10%;
-    margin: 20px;
+    left: 5vw;
+    top: 5vh;
+    margin: 0px;
     padding: 5px;
     width: 600px;
     height: 200px;} 
