--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     top: 5vh;
     margin: 0px;
     padding: 5px;
-    width: 600px;
-    height: 200px;} 
+    width: 90vw;
+    height: 90vh;} 
   </style>
   <body>
     <div>
