--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <style> 
     p {
     color:orange;}
+    body {
+    margin: 0;}
     div {
     background-color: purple;
     position: absolute;
