--- a/Schuster-01.html
+++ b/Schuster-01.html
@@ -11,7 +11,7 @@
         width: 90vw;
         height: 90vh;
         position: absolute;
-        background-image: url(Images/wireFrame.jpg);
+        background-image: url(https://donuttelo.github.io/min240-002/wireFrame.jpg);
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
