--- a/midterm.html
+++ b/midterm.html
@@ -3,8 +3,8 @@
 <style>
     #ballerina {
 
-        width: 100vmin;
-        height: 100vmin;
+        width: 118px;
+        height: 130px;
         margin: auto;
 
         background-image: url("https://previews.123rf.com/images/kathygold/kathygold1009/kathygold100900068/7730727-african-american-ballerina-silhouette-on-a-white-background.jpg");
