--- a/Fruit.html
+++ b/Fruit.html
@@ -126,7 +126,7 @@
     
     #workflowPage {
         position: absolute;
-        background-image:url(Images/workFlow.png);
+        background-image:url(https://donuttelo.github.io/min240-002/workFlow.png);
         top: 10vmin;
         left: 10vmin;
         width: 80vmin;
