--- a/landingpage.html
+++ b/landingpage.html
@@ -32,12 +32,12 @@
         }
 
     </script>
-    <title>Monument Valley Mobile Games | ustwo</title>
+    <title>Simply Writing Music</title>
     <link data-react-helmet="true" rel="preconnect" src="https://use.typekit.net">
     <link data-react-helmet="true" rel="preconnect" src="https://hits-i.iubenda.com">
     <link data-react-helmet="true" rel="preconnect" src="https://cdn.iubenda.com">
     <meta data-react-helmet="true" property="og:image" content="//images.ctfassets.net/gw5wr8vzz44g/5GtxNkxKOCScNl9ybSl3lG/477f02ca7e20c94c257449bb7582cbce/ustwo-casestudy-monument-valley-games.jpg?w=1000">
-    <meta data-react-helmet="true" name="description" content="Journey through stunning and inspiring worlds, with uplifting characters and impossible geometry">
+    <meta data-react-helmet="true" name="description" content="Write music the way you always wanted to. Take ahold of those melodies in your head and make them a reality.">
     <meta data-react-helmet="true" name="keywords" content="">
     <script data-react-helmet="true" type="text/javascript">
         var _iub = _iub || [];
@@ -74,14 +74,12 @@
     </script>
     <link rel="shortcut icon" href="/icons/icon-48x48.png">
     <link rel="manifest" href="/manifest.webmanifest">
-    <link rel="canonical" href="https://www.ustwo.com/work/monument-valley-mobile-games" data-baseprotocol="https:" data-basehost="www.ustwo.com">
     <link as="script" rel="preload" href="/styles-c6fb31bbe2ca917610ce.js">
     <link as="script" rel="preload" href="/component---src-templates-case-study-js-5bb3bc8442f011dd24ed.js">
     <link as="script" rel="preload" href="/3-1cac7c7214553f2a7b02.js">
     <link as="script" rel="preload" href="/1-db17bff1db8696e82df2.js">
     <link as="script" rel="preload" href="/app-30cbb7bc3dee4a4e2b1d.js">
     <link as="script" rel="preload" href="/webpack-runtime-2b4700437cbad3c89ac8.js">
-    <link as="fetch" rel="preload" href="/static/d/110/path---work-monument-valley-mobile-games-309-493-67UJn1XDKFquH3lcfeajoLcS8Io.json" crossorigin="use-credentials">
     <style id="nprogress-styles">
         #nprogress {
             pointer-events: none;
@@ -251,11 +249,11 @@
                                     <div style="width: 100%; padding-bottom: 51.7813%;"></div><img src="/Images/james-owen-442400-unsplash.jpg" alt="" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; object-position: center center; opacity: 0; transition: opacity 0.5s ease 0.5s;">
                                     <picture>
                                         <source type="image/webp" srcset="/Images/james-owen-442400-unsplash.jpg?w=1000&amp;h=518&amp;q=70&amp;fm=webp 1000w,
-/Images/james-owen-442400-unsplash.jpg?w=2000&amp;h=1036&amp;q=70&amp;fm=webp 2000w,
-/Images/james-owen-442400-unsplash.jpg?w=3200&amp;h=1657&amp;q=70&amp;fm=webp 3200w" sizes="(max-width: 4000px) 100vw, 4000px">
+https://donuttelo.github.io/min240-002/james-owen-442400-unsplash.jpg?w=2000&amp;h=1036&amp;q=70&amp;fm=webp 2000w,
+https://donuttelo.github.io/min240-002/james-owen-442400-unsplash.jpg?w=3200&amp;h=1657&amp;q=70&amp;fm=webp 3200w" sizes="(max-width: 4000px) 100vw, 4000px">
                                         <source srcset="/Images/james-owen-442400-unsplash.jpg?w=1000&amp;h=518&amp;q=70&amp;fm=jpg 1000w,
-/Images/james-owen-442400-unsplash.jpg?w=2000&amp;h=1036&amp;q=70&amp;fm=jpg 2000w,
-/Images/james-owen-442400-unsplash.jpg?w=3200&amp;h=1657&amp;q=70&amp;fm=jpg 3200w" sizes="(max-width: 4000px) 100vw, 4000px"><img alt="ustwo-casestudy-monument-valley-games" src="/Images/james-owen-442400-unsplash.jpg" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; object-position: center center; opacity: 1; transition: none 0s ease 0s;"></picture><noscript>
+https://donuttelo.github.io/min240-002/james-owen-442400-unsplash.jpg?w=2000&amp;h=1036&amp;q=70&amp;fm=jpg 2000w,
+https://donuttelo.github.io/min240-002/james-owen-442400-unsplash.jpg?w=3200&amp;h=1657&amp;q=70&amp;fm=jpg 3200w" sizes="(max-width: 4000px) 100vw, 4000px"><img alt="ustwo-casestudy-monument-valley-games" src="/Images/james-owen-442400-unsplash.jpg" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; object-position: center center; opacity: 1; transition: none 0s ease 0s;"></picture><noscript>
                                         <picture>
                                             <source type='image/webp' srcSet="//images.ctfassets.net/gw5wr8vzz44g/5GtxNkxKOCScNl9ybSl3lG/477f02ca7e20c94c257449bb7582cbce/ustwo-casestudy-monument-valley-games.jpg?w=1000&h=518&q=70&fm=webp 1000w,
 //images.ctfassets.net/gw5wr8vzz44g/5GtxNkxKOCScNl9ybSl3lG/477f02ca7e20c94c257449bb7582cbce/ustwo-casestudy-monument-valley-games.jpg?w=2000&h=1036&q=70&fm=webp 2000w,
