--- a/landingpage.html
+++ b/landingpage.html
@@ -250,8 +250,8 @@
                                 <div class="article-content-module--headerImage--3DHsc gatsby-image-wrapper" style="position: relative; overflow: hidden;">
                                     <div style="width: 100%; padding-bottom: 51.7813%;"></div><img src="/Images/james-owen-442400-unsplash.jpg" alt="" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; object-position: center center; opacity: 0; transition: opacity 0.5s ease 0.5s;">
                                     <picture>
-                                        <source type="image/webp" srcset="/Images/james-owen-442400-unsplash.jpg?w=1000&amp;h=518&amp;q=70&amp;fm=webp 1000w,
-/Images/james-owen-442400-unsplash.jpg?w=2000&amp;h=1036&amp;q=70&amp;fm=webp 2000w,
+                                        <source type="image/webp" srcset="https://donuttelo.github.io/min240-002/james-owen-442400-unsplash.jpg?w=1000&amp;h=518&amp;q=70&amp;fm=webp 1000w,
+https://donuttelo.github.io/min240-002/james-owen-442400-unsplash.jpg?w=2000&amp;h=1036&amp;q=70&amp;fm=webp 2000w,
 /Images/james-owen-442400-unsplash.jpg?w=3200&amp;h=1657&amp;q=70&amp;fm=webp 3200w" sizes="(max-width: 4000px) 100vw, 4000px">
                                         <source srcset="/Images/james-owen-442400-unsplash.jpg?w=1000&amp;h=518&amp;q=70&amp;fm=jpg 1000w,
 /Images/james-owen-442400-unsplash.jpg?w=2000&amp;h=1036&amp;q=70&amp;fm=jpg 2000w,
