--- a/landingpage.html
+++ b/landingpage.html
@@ -267,7 +267,9 @@ https://donuttelo.github.io/min240-002/james-owen-442400-unsplash.jpg?w=3200&amp
                                             <div>
                                                 <h2>Simply Writing Music</h2>
                                                 <p>Simply Writing Music is an app that helps musicians begin writing their own music by teaching them basic music theory, providing them with an orginized software that aids them in their creativity, allows the users to share their music, and give tips to and learn from other song writers, as well as passing down their own experience to other song writers. Whether you're brand new to writing music, or you've been writing your whole life, this app will give you the tools to solidify, orginize, and share your music to the world! </p>
-                                                <p></p><p></p><p></p>
+                                                <p></p>
+                                                <p></p>
+                                                <p></p>
                                                 <div class="article-content-module--imageWrapper--QkT9G">
                                                     <div class="article-content-module--headerImage--3DHsc gatsby-image-wrapper" style="position: relative; overflow: hidden;">
                                                         <div style="width: 100%; padding-bottom: 65%;"></div><img src="https://donuttelo.github.io/min240-002/william-white-34988-unsplash.jpg" alt="" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; object-position: center center; opacity: 0; transition: opacity 0.5s ease 0.5s;">
@@ -276,13 +278,126 @@ https://donuttelo.github.io/min240-002/james-owen-442400-unsplash.jpg?w=3200&amp
                                                             <source srcset="/Images/william-white-34988-unsplash.jpg?w=1000&amp;h=518&amp;q=70&amp;fm=jpg 1000w,
 https://donuttelo.github.io/min240-002/william-white-34988-unsplash.jpg?w=2000&amp;h=1036&amp;q=70&amp;fm=jpg 2000w,
 https://donuttelo.github.io/min240-002/william-white-34988-unsplash.jpg?w=3200&amp;h=1657&amp;q=70&amp;fm=jpg 3200w" sizes="(max-width: 4000px) 100vw, 4000px"><img alt="music-community" src="/Images/william-white-34988-unsplash.jpg" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; object-position: center center; opacity: 1; transition: none 0s ease 0s;"></picture><noscript>
-                                                            
+
                                                         </noscript>
                                                     </div>
-                                                    
+
                                                 </div>
                                                 <h2>Our Goal</h2>
-                                                <p>We believe that music brings people together. Our goal is to aid those wishing to share their melodic voice with the world and share their stories with others. We also want to create a place where musicians can easily come together and teach and learn from each other to help grow our musical community.</p>
+                                                <p>We believe that music brings people together. Our goal is to aid those wishing to share their melodic voice with the world and share their stories with others.</p>
+                                                <p> We also want to create a place where musicians can easily come together and teach and learn from each other to help grow our musical community.</p>
+
+
+                                                <div class="container-fluid">
+                                                    <h3>Design Process</h3>
+                                                    <div id="accordion">
+                                                        <div class="card">
+                                                            <div class="card-header" id="headingOne">
+                                                                <h5 class="mb-0">
+                                                                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                                                        User Research & Interviews
+                                                                    </button>
+                                                                </h5>
+                                                            </div>
+
+                                                            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                                                                <div class="card-body">
+                                                                    <h3>Other Apps:</h3>
+                                                                    <p>Other music writing apps give the user the nessessary tools that help them orginize and write music. However, these apps do not encorporate the learning and social aspect that Simply Writing Music does. </p>
+                                                                    <p>
+                                                                        Our app gives the user the tools to write but also gives them the options to learn music theory in order to sharpen their skills and to be able to connect to others and learn from them.
+                                                                    </p>
+                                                                    <h3>Interview with Josh Ferguson:</h3>
+                                                                    <p>Question: "What would you like to see in an app designed to help you write music?"</p>
+                                                                    <p>
+                                                                    Answer:
+                                                                    "I just want an app that can layout my music that easily transposes. Maybe an app that can even teach me some music theory."</p>
+                                                                    <p>Question: </p>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="card">
+                                                            <div class="card-header" id="headingTwo">
+                                                                <h5 class="mb-0">
+                                                                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                                                        Brainstorming
+                                                                    </button>
+                                                                </h5>
+                                                            </div>
+                                                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                                                                <div class="card-body">
+
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="card">
+                                                            <div class="card-header" id="headingThree">
+                                                                <h5 class="mb-0">
+                                                                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                                                        Ideation
+                                                                    </button>
+                                                                </h5>
+                                                            </div>
+                                                            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                                                                <div class="card-body">
+                                                                    ???
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
+                                                        <div class="card">
+                                                            <div class="card-header" id="headingFour">
+                                                                <h5 class="mb-0">
+                                                                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                                                        Wireframe & Workflow
+                                                                    </button>
+                                                                </h5>
+                                                            </div>
+                                                            <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
+                                                                <div class="card-body">
+                                                                    ???
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
+
+                                                        <div class="card">
+                                                            <div class="card-header" id="headingFive">
+                                                                <h5 class="mb-0">
+                                                                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                                                                        Graphical User Interface
+                                                                    </button>
+                                                                </h5>
+                                                            </div>
+                                                            <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
+                                                                <div class="card-body">
+                                                                    ???
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
+                                                        <div class="card">
+                                                            <div class="card-header" id="headingSix">
+                                                                <h5 class="mb-0">
+                                                                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                                                                        Video Pitch
+                                                                    </button>
+                                                                </h5>
+                                                            </div>
+                                                            <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
+                                                                <div class="card-body">
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
+                                                    </div>
+                                                </div>
+
+
+                                                <div>
+
+
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -294,15 +409,22 @@ https://donuttelo.github.io/min240-002/william-white-34988-unsplash.jpg?w=3200&a
                 <div class="footer-module--footer--2r2aa composes--smallerText--PINKU">
                     <div class="footer-module--inner--GW_NP composes--coreLayout--1m95z">
                         <div class="footer-module--bottomWrapper--2gK5x">
-                            <div class="footer-module--col1--2yx9i">
-                                <div>
-                                    <h2>Want news?</h2>
-                                    <p>Sign up to get all the new information about our app!</p><a href="https://google.com" class="button button-onward button-invert">Subscribe</a>
-                                </div>
-                            </div>
+
                             <div class="footer-module--col2--2hRPA">
                                 <ul class="footer-module--socialNetworks--X9ZLo">
                                     <li class="footer-module--socialNetwork--3BF5P undefined"><a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">facebook</a></li>
                                     <li class="footer-module--socialNetwork--3BF5P undefined"><span>|</span><a href="http://www.twitter.com" target="_blank" rel="noopener noreferrer">twitter</a></li>
                                     <li class="footer-module--socialNetwork--3BF5P undefined"><span>|</span><a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">linkedIn</a></li>
                                     <li class="footer-module--socialNetwork--3BF5P undefined"></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script>
+
+    </script>
+</body></html>
