--- a/landingpage.html
+++ b/landingpage.html
@@ -1,6 +1,8 @@
+<!doctype html>
 <html lang="en">
 
 <head>
+    <title>Simply Writing Music</title>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -72,7 +74,8 @@ https://donuttelo.github.io/min240-002/james-owen-442400-unsplash.jpg?w=3200&amp
                                             <div>
                                                 <div id="mid">
                                                     <h2>Simply Writing Music</h2>
-                                                    <p>Simply Writing Music is an app that helps musicians begin writing their own music by teaching them basic music theory, providing them with an orginized software that aids them in their creativity, allows the users to share their music, and give tips to and learn from other song writers, as well as passing down their own experience to other song writers. Whether you're brand new to writing music, or you've been writing your whole life, this app will give you the tools to solidify, orginize, and share your music to the world! </p>
+                                                    <p>Simply Writing Music is an app that helps musicians begin writing their own music by teaching them basic music theory, providing them with an orginized software that aids them in their creativity, allows the users to share their music, and give tips to and learn from other song writers, as well as passing down their own experience to other song writers.</p>
+                                                    <p> Whether you're brand new to writing music, or you've been writing your whole life, this app will give you the tools to solidify, orginize, and share your music to the world! </p>
                                                 </div>
 
                                                 <div class="article-content-module--imageWrapper--QkT9G">
@@ -82,7 +85,7 @@ https://donuttelo.github.io/min240-002/james-owen-442400-unsplash.jpg?w=3200&amp
 
                                                             <source srcset="/Images/william-white-34988-unsplash.jpg?w=1000&amp;h=518&amp;q=70&amp;fm=jpg 1000w,
 https://donuttelo.github.io/min240-002/william-white-34988-unsplash.jpg?w=2000&amp;h=1036&amp;q=70&amp;fm=jpg 2000w,
-https://donuttelo.github.io/min240-002/william-white-34988-unsplash.jpg?w=3200&amp;h=1657&amp;q=70&amp;fm=jpg 3200w" sizes="(max-width: 4000px) 100vw, 4000px"><img alt="music-community" src="/Images/william-white-34988-unsplash.jpg" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; object-position: center center; opacity: 1; transition: none 0s ease 0s;"></picture><noscript>
+https://donuttelo.github.io/min240-002/william-white-34988-unsplash.jpg?w=3200&amp;h=1657&amp;q=70&amp;fm=jpg 3200w" sizes="(max-width: 4000px) 100vw, 4000px"><img alt="music-community" src="/final/images/william-white-34988-unsplash.jpg" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; object-position: center center; opacity: 1; transition: none 0s ease 0s;"></picture><noscript>
 
                                                         </noscript>
                                                     </div>
@@ -106,7 +109,7 @@ https://donuttelo.github.io/min240-002/william-white-34988-unsplash.jpg?w=3200&a
                                                                 </h5>
                                                             </div>
 
-                                                            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                                                            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                                                                 <div class="card-body">
                                                                     <h3>Other Apps:</h3>
                                                                     <p>Other music writing apps give the user the nessessary tools that help them orginize and write music. However, these apps do not encorporate the learning and social aspect that Simply Writing Music does. </p>
@@ -114,11 +117,18 @@ https://donuttelo.github.io/min240-002/william-white-34988-unsplash.jpg?w=3200&a
                                                                         Our app gives the user the tools to write but also gives them the options to learn music theory in order to sharpen their skills and to be able to connect to others and learn from them.
                                                                     </p>
                                                                     <h3>Interview with Josh Ferguson:</h3>
-                                                                    <p>Question: "What would you like to see in an app designed to help you write music?"</p>
-                                                                    <p>
-                                                                        Answer:
-                                                                        "I just want an app that can layout my music that easily transposes. Maybe an app that can even teach me some music theory."</p>
-                                                                    <p>Question: </p>
+                                                                    <p>Question: What would you like to see in an app designed to help you write music?</p>
+                                                                    <p>Answer: "I just want an app that can layout my music that easily transposes to other keys. Maybe an app that could even teach me some music theory."</p>
+                                                                    <p>Question: How might you like to see this app incorporate a social structure or how would you like to see this app bring people together? </p>
+                                                                    <p>Answer: "Probably just being able to share easily with other artists and have the ability to build a community with other songwriters."</p>
+                                                                    <p>Question: Would you be interested in an app that would allow you to share songs, give and recieve input to and from other songwriters, and taught simple, basic music theory in order to solidify the users understanding of music?</p>
+                                                                    <p>Answer: "That sounds awesome! I would love that app! The only issue would be if people started trolling other people's songs with random coments. But what app doesn't have that problem honestly?"</p>
+                                                                    <p>Question: What are some issues you've had with songwriting that you'd like to see this app fix?</p>
+                                                                    <p>Answer: "I tend to make songs in a key that is too high or too low for my vocal range. It would be really nice to just be able to quickly transpose my songs on the spot."</p>
+
+                                                                    <h3 style="padding-left: 2.5vh;">Affinity Wall: </h3>
+                                                                    <div id="affinityWall" style="width: 100%; height: 100vmin; background-image: url(Images/research.jpeg); background-size: contain; background-repeat: no-repeat; background-position: center;">
+                                                                    </div>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -132,7 +142,13 @@ https://donuttelo.github.io/min240-002/william-white-34988-unsplash.jpg?w=3200&a
                                                             </div>
                                                             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                                                                 <div class="card-body">
-                                                                    asasf
+                                                                    <h3>Persona:</h3>
+                                                                    <div id="josh" style="margin-bottom: 20px;">
+                                                                        <img src="Images/Pancake%20Night%202-Pancake%20Night%202-0182.jpg" width="250px">
+                                                                    </div>
+                                                                    <b>Josh Ferguson:</b>
+                                                                    <p>21 years old, Male, NKU Entrepreneurship Major student, Student Painter Intern</p>
+                                                                    <p>Josh is a avid musician. He is primarily a singer, secondarily a acustic guitarist, and also plays the piano and drums. He is a talented songwriter. But Josh wishes there was an app that he could use that would orginize his music, help him wirte, teach him to grow musically, and even be able to share and learn from other songwriters.</p>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -146,7 +162,8 @@ https://donuttelo.github.io/min240-002/william-white-34988-unsplash.jpg?w=3200&a
                                                             </div>
                                                             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                                                                 <div class="card-body">
-                                                                    ???
+                                                                    <h3 style="padding-left: 2.5vh;">Story Board: </h3>
+                                                                    <div id="storyBoard" style="width: 100%; height: 100vmin; background-image: url(Images/Ted.jpg); background-size: contain; background-repeat: no-repeat; background-position: center;">
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -155,7 +172,7 @@ https://donuttelo.github.io/min240-002/william-white-34988-unsplash.jpg?w=3200&a
                                                             <div class="card-header" id="headingFour">
                                                                 <h5 class="mb-0">
                                                                     <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                                                        Wireframe & Workflow
+                                                                        Wireframe and Workflow
                                                                     </button>
                                                                 </h5>
                                                             </div>
@@ -207,6 +224,7 @@ https://donuttelo.github.io/min240-002/william-white-34988-unsplash.jpg?w=3200&a
                                             </div>
                                         </div>
                                     </div>
+                                    </div>
                                 </section>
                             </div>
                         </article>
@@ -215,4 +233,9 @@ https://donuttelo.github.io/min240-002/william-white-34988-unsplash.jpg?w=3200&a
             </div>
         </div>
     </div>
+    <footer>
+        <div class="footer-copyright text-center py-3" style="color: white;"> Isaac Schuster | 
+            <a> MIN 240</a> | 2019
+        </div>
+    </footer>
 </body></html>
